k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-java
  template:
    metadata:
      labels:
        app: app-java

      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: app-java
          image: jodelnord/usine-logicielle-java:c37a1a047a16e0bd226a5da765c66ced76b8fcab
          ports:
            - containerPort: 8080
