k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-java-service
spec:
  type: ClusterIP
  selector:
    app: app-java
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
