k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-java-ingress
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-java-service
                port:
                  number: 80
